--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,18 +3,22 @@
  * and scoped locally.
  */
 
+
 .heroBanner {
-  padding: 4rem 0;
+  padding: 8rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 2rem;
+    padding: 4rem 2rem;
   }
 }
+
 
 .buttons {
   display: flex;
