--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -61,9 +61,12 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+html {
+  background-color:var(--body-color);
+}
+
 body {
   font-family: var(--ifm-font-family-base);
-  background-color:var(--body-color) ;
 }
 
 footer {
