--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,6 +25,12 @@
   --logo-color:   rgba(232, 100, 75);
   --menu-color: #403939;
 
+  --bento-bg-color: #ffffff;
+  --bento-border-color: #fae0db;
+  --bento-icon-bg: rgba(232, 100, 75, 0.05);
+  --link-color: #a22d15;
+
+
   --ifm-footer-background-color: var(--body-color);
   --ifm-navbar-background-color: var(--body-color);
   --ifm-global-shadow-lw: 0 1px 2px 0 var(--border-color-40);
@@ -37,6 +43,21 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
   --14px: 0.875rem;
+
+    /* @link https://utopia.fyi/type/calculator?c=320,16,1.25,1400,16,1.333,3,0,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+    --step-0: clamp(1rem, 1rem + 0vi, 1rem);
+    --step-1: clamp(1.25rem, 1.2254rem + 0.123vi, 1.333rem);
+    --step-2: clamp(1.5625rem, 1.499rem + 0.3176vi, 1.7769rem);
+    --step-3: clamp(1.9531rem, 1.83rem + 0.6155vi, 2.3686rem);
+  
+    /* @link https://utopia.fyi/clamp/calculator?a=320,1400,16—48|20—28|24—40|24—32|40—64 */
+  
+    --fluid-16-48: clamp(1rem, 0.4074rem + 2.963vi, 3rem);
+    --fluid-20-28: clamp(1.25rem, 1.1019rem + 0.7407vi, 1.75rem);
+    --fluid-24-40: clamp(1.5rem, 1.2037rem + 1.4815vi, 2.5rem);
+    --fluid-24-32: clamp(1.5rem, 1.3519rem + 0.7407vi, 2rem);
+    --fluid-40-64: clamp(2.5rem, 2.0556rem + 2.2222vi, 4rem);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -56,6 +77,11 @@
   --border-color-40: rgba(26, 52, 65, 0.4);
   --logo-color: rgba(153, 248, 232);
   --menu-color: #E1E5E5;
+
+  --bento-bg-color: #001d2c;
+  --bento-border-color: #1a3441;
+  --bento-icon-bg: rgba(153, 248, 232, 0.25);
+  --link-color: #99f8e8;
 
 
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
@@ -90,7 +116,7 @@ footer {
 
 
 .home {
-  background-color: #002033;
+  background-color: var(--bg-color);
  }
 
 .content {
@@ -106,4 +132,99 @@ footer {
 /* Sidemenu */
 .menu__list {
   font-size: var(--14px);
+}
+
+/** Home Revamp */
+
+.sr-only {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  padding-block-start: 4rem;
+}
+
+.logo svg {
+  height: 100%;
+  width: 64px;
+  fill: var(--logo-color);
+}
+
+.bento-boxes {
+  margin-block-start: var(--fluid-40-64, 2.5rem);
+  padding-block-end: var(--fluid-40-64, 2.5rem);
+  display: grid;
+  gap: var(--fluid-20-28, 1.5rem);
+  grid-template-columns: 1fr;
+
+}
+
+
+@media screen and (min-width: 62rem) {
+  .bento-boxes {
+    grid-template-columns: repeat(2, 1fr);
+  }
+    .bento-box:first-child {
+      grid-area: 1 / 1 / 1 / 3;
+  }
+}
+
+.bento-box {
+  padding: var(--fluid-24-40) var(--fluid-24-32);
+  border: 1px solid var(--bento-border-color);
+  border-radius: 4px;
+
+  color: var(--text-color);
+  background: var(--bento-bg-color);
+
+}
+
+.bento-box__icon {
+  padding: 12px;
+  border-radius: 40px;
+  max-width: max-content;
+  background-color: var(--bento-icon-bg);
+
+ 
+}
+
+.bento-box__icon > svg {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  width: 40px;
+  height: auto;
+  fill: var(--logo-color);
+}
+
+.bento-box__title {
+  margin-block-start: 0.875em;
+  font-size: var(--step-2);
+  font-weight: 500;
+  color: inherit;
+}
+
+.bento-box__description {
+  margin-block-start: 0.625em;
+  margin-block-end: 0;
+  max-width: 65ch;
+
+  font-size: var(--step-0);
+  font-weight: normal;
+  color: inherit;
+}
+
+a.bento-box__link {
+  display: inline-block;
+  margin-block-start: 1em;
+  color: var(--link-color);
+  text-decoration: underline;
 }
